--- a/app/src/main/res/layout/fragment_left_.xml
+++ b/app/src/main/res/layout/fragment_left_.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,7 +15,7 @@
             android:layout_marginTop="10dp"
             android:text="英文-----中文"
             android:gravity="center_horizontal"
-            android:textSize="20dp"
+            android:textSize="20sp"
             />
     </LinearLayout>
     <LinearLayout
@@ -88,9 +89,10 @@
             android:id="@+id/result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableBottom="@drawable/pron_logo"
             android:visibility="invisible"
-            android:gravity="center" />
+            android:gravity="center"
+            app:drawableBottomCompat="@drawable/pron_logo"
+            android:focusable="true" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
