--- a/app/src/main/res/layout/fragment_left_.xml
+++ b/app/src/main/res/layout/fragment_left_.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         >
         <TextView
-            android:id="@+id/text1"
+            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
