--- a/app/src/main/res/layout/activity_port_.xml
+++ b/app/src/main/res/layout/activity_port_.xml
@@ -1,103 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:id="@+id/text"
-            android:text="英文-----中文"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
-
-        <EditText
-            android:id="@+id/word"
-            android:layout_width="310dp"
-            android:layout_height="match_parent"
-            android:drawableStart="@android:drawable/ic_menu_search"
-            android:gravity="center_vertical"
-            android:hint="请输入查询单词"
-            android:imeOptions="actionSearch"
-            android:singleLine="true" />
-        <TextView
-            android:id="@+id/find"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="搜索"
-            android:textSize="20sp" />
-    </LinearLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        >
-        <LinearLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="30dp"
-                >
-                <TextView
-                    android:id="@+id/history"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:gravity="left|center_vertical"
-                    android:text="搜索历史"
-                    />
-                <com.example.wordsbook.view_History
-                    android:id="@+id/listView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-            </LinearLayout>
-            <TextView
-                android:id="@+id/clear"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="#F6F6F6"
-                android:gravity="center"
-                android:text="清除搜索历史" />
-        </LinearLayout>
-    </ScrollView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/pron_result"
-            android:gravity="center"
-            android:drawableBottom="@drawable/pron_logo"
-            android:visibility="invisible"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/meaning"
-            android:gravity="center"
-            />
+        android:layout_height="match_parent">
 
     </LinearLayout>
 </LinearLayout>
