--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,15 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/add_words"
-        android:title="添加单词"
-        />
-    <item
-        android:id="@+id/help"
-        android:title="帮助"
-        />
-    <item
-        android:id="@+id/exit"
-        android:title="退出"
-        />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+
+    <item android:id="@+id/action_search" android:title="@string/action_search"
+        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_insert" android:title="@string/action_insert"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
