--- a/app/src/main/res/layout/add_word.xml
+++ b/app/src/main/res/layout/add_word.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:layout_marginStart="50dp">
+    <TableRow
         android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+
         <EditText
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
             android:id="@+id/addword"
-            android:hint="输入单词"
-            />
-    </LinearLayout>
-    <LinearLayout
+            android:layout_width="213dp"
+            android:layout_height="wrap_content"
+            android:hint="输入单词" />
+    </TableRow>
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -24,8 +25,8 @@
             android:id="@+id/addpronunciation"
             android:hint="输入读音"
             />
-    </LinearLayout>
-    <LinearLayout
+    </TableRow>
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -35,8 +36,8 @@
             android:id="@+id/addmeaning"
             android:hint="输入中文翻译"
             />
-    </LinearLayout>
-    <LinearLayout
+    </TableRow>
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -46,5 +47,5 @@
             android:id="@+id/addsample"
             android:hint="输入例句"
             />
-    </LinearLayout>
-</LinearLayout>
+    </TableRow>
+</TableLayout>
