--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:showIn="@layout/main_activity" tools:context=".MainActivity">
+    tools:context=".MainActivity">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"  android:orientation="horizontal"
@@ -16,8 +16,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-        <fragment
-            android:name="com.example.wordsbook.Fragment.WordItem_Fragment"
+        <FrameLayout
             android:id="@+id/wordslist"
             android:layout_width="0dp"
             android:layout_height="match_parent"
