--- a/app/src/main/res/layout/fragment_word_detail_.xml
+++ b/app/src/main/res/layout/fragment_word_detail_.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="left|top">
+        android:layout_gravity="start|top">
 
         <TextView android:layout_width="match_parent"
             android:layout_height="wrap_content"
