--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,8 @@
         android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
 
-        <FrameLayout
+        <fragment
+            android:name="com.example.wordsbook.Fragment.WordItem_Fragment"
             android:id="@+id/wordslist"
             android:layout_width="0dp"
             android:layout_height="match_parent"
