--- a/app/src/main/res/layout/fragment_word_detail_.xml
+++ b/app/src/main/res/layout/fragment_word_detail_.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
     tools:context=".Fragment.WordDetail_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,8 +15,7 @@
 
         <TextView android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/word"
-            android:layout_marginTop="100dp"/>
+            android:id="@+id/word"/>
         <TextView android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/meaning"/>
