--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,5 +7,8 @@
         android:orderInCategory="100" app:showAsAction="never" />
 
     <item android:id="@+id/action_insert" android:title="@string/action_insert"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100" app:showAsAction="never"/>
+    <item android:id="@+id/action_help" android:title="@string/action_help"
+        android:orderInCategory="100" app:showAsAction="never"/>
+
 </menu>
